--- a/views/home/index.html
+++ b/views/home/index.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/output.css">
+    <title>Home</title>
 </head>
 <body>
     <nav id="navbar" class="fixed top-0 right-0 left-0 bg-gray-800 h-16">   
